--- a/indexstylesheet.css
+++ b/indexstylesheet.css
@@ -1,88 +1,120 @@
 /*GLOBAL STYLING & MEDIA QUERIES*/
 
-html, body {
-	width: 100%;
-	height: 100%;
+html,
+body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-   
+
 }
 
 .ourContainer {
     height: 100vh;
 }
 
-/*NAV BAR*/
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 1.6rem;
-    padding-left: 0;
-    font-family: 'Permanent Marker';
+@media only screen and (min-width: 992px) {
+    p.lead {
+        display: block;
+        width: 690px;
+        height: 129px;
+        margin: auto;
+        padding: 0;!ant
+    }
 }
 
-ul.navBar_main {
-    padding-left: 10px;
-}
-
-ul.about_social {
-    padding-left: 10px
-}
-
-nav ul li {
-    border-bottom: yellowgreen 1.2px solid;
-    margin-right: 10px;
-    display: inline-block;
-}
-
-/*MAIN CONTENT*/
 /*background*/
-div.backgroundStyle {
-background: linear-gradient(147deg, #77a7c5, #a7c6db, #c0d1db, #fe956e);
-background-size: 800% 800%;
--webkit-animation: AnimationName 23s ease infinite;
--moz-animation: AnimationName 23s ease infinite;
--o-animation: AnimationName 23s cubic-bezier(.21, -0.13, .25, 1) infinite;
-animation: AnimationName 23s ease infinite;
+
+.backgroundStyle {
+    background: linear-gradient(147deg, #77a7c5, #a7c6db, #c0d1db, #fe956e);
+    background-size: 800% 800%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    -o-animation: AnimationName 20s cubic-bezier(.21, -0.13, .25, 1) infinite;
+    animation: AnimationName 20s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 48%}
-    50%{background-position:100% 53%}
-    100%{background-position:0% 48%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 48%}
-    50%{background-position:100% 53%}
-    100%{background-position:0% 48%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
 @-o-keyframes AnimationName {
-    0%{background-position:0% 48%}
-    50%{background-position:100% 53%}
-    100%{background-position:0% 48%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
 @keyframes AnimationName {
-    0%{background-position:0% 48%}
-    50%{background-position:100% 53%}
-    100%{background-position:0% 48%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+/*NAV BAR*/
+
+nav div.leafy_menu_btn {
+    color: yellowgreen;
+}
+
+nav.nav-Bg {
+/*    background-color: linear-gradient(to right,#392033,white);*/
+    background-image: linear-gradient(to right, rgba(115, 170, 204,  0.37), rgba(150, 162, 203, 0.37), rgb(177, 155, 189));
+    padding: 0;
+    font-size: 1.3rem;
+    box-shadow: 0.5px 2px #f8f0ed;
+}
+.navbar-nav .nav-link {
+   color: deeppink;
+}
+/*MAIN CONTENT*/
 
 /*>>title<<*/
 
 h1.title {
+   
     font-size: 5.5rem;
     text-align: center;
     margin-bottom: 0px;
     text-align: center;
-    text-shadow: 2px 3px rgba(68, 69, 70, 0.35);
+    text-shadow: 4px 3px #464a4c;
+    color: white
 }
 
-h1.title span.ve {
-    color: yellowgreen;
-    text-shadow: 2px 3px rgba(154, 205, 50, 0.31);
-    font-family: 'Delius Swash Caps',cursive;
+h1 span.ve {
+    color: #9acd32;
+    font-family: 'Delius Swash Caps', cursive;
+     text-shadow: 2px 3px #6156e5;
 }
 
 .location {
@@ -91,31 +123,32 @@ h1.title span.ve {
     padding: 0;
     margin: 0;
     text-align: center;
+    text-shadow: 2px 2px  #7d78b7;
 }
 
 /*>>description<<*/
-
 p.lead {
     font-size: 1.8em;
     font-weight: 300;
     text-align: center;
     text-transform: lowercase;
     font-family: 'Delius Swash Caps', cursive;
-    }
-
+}
 
 span.hangryRed {
     font-family: 'Permanent Marker';
-    color: rgb(214, 68, 59);
+    color:  #fe956e;
     font-size: 2.45rem;
     color: rgb(214, 68, 59);
+    text-shadow: 2px 3px #464a4c;
 }
 
 span.treat {
     font-family: 'Delius Swash Caps', cursive;
-    font-size: 2rem;
-    text-decoration:;
-    color: #c7a407;
+    font-size: 2.3rem;
+    color: yellowgreen;
+    font-family: 'Delius Swash Caps', cursive;
+    text-shadow: 1px 3px #6156e5;
 }
 
 .description {
@@ -125,3 +158,5 @@ span.treat {
 }
 
 /*>>choices<<*/
+
+
