--- a/indexstylesheet.css
+++ b/indexstylesheet.css
@@ -1,33 +1,45 @@
-/*GLOBAL STYLING & MEDIA QUERIES*/
+/*GLOBAL STYLING & MEDIA QUERIES/RESPONSIVE STYLES*/
 
 html,
 body {
     width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+    min-height: 100%;
     font-size: 16px;
 }
 
-.ourContainer {
-    height: 100vh;
+/*
+div {
+    border: 0.5px solid red;
+}
+*/
+
+p.nopadding_bt {
+    margin-bottom: 2px;
 }
 
-@media only screen and (max-width: 544px){
+@media only screen and (max-width: 544px) {
+    /*Responsive font sizes for smaller screens*/
     html,
     body {
-        color: red;
         font-size: 12px;
+    }
+    /*makes buttons block elements for smaller screens*/
+    .ourButton {
+        width: 80%;
+        display: inline-block;
+    }
+
+    #cloud {
+        visibility: hidden;
     }
 }
 
 @media only screen and (min-width: 992px) {
-        p.lead {
+    p.lead {
         display: block;
         width: 690px;
-        height: 129px;
         margin: auto;
-        padding: 0;
+        padding: 2;
     }
 }
 
@@ -92,15 +104,20 @@ body {
 
 /*NAV BAR*/
 
-nav div.leafy_menu_btn {
-    color: yellowgreen;
+span.leafy_menu_btn {
+    color: #82ac2d;
+}
+}
+span.vegan_ve {
+    color: #9acd32;
+    font-family: 'Delius Swash Caps', cursive;
+    text-shadow: 1px 2px #463da8;
 }
 
 nav.nav-Bg {
-    /*    background-color: linear-gradient(to right,#392033,white);*/
     background-image: linear-gradient(to right, rgba(115, 170, 204, 0.37), rgba(150, 162, 203, 0.37), rgb(177, 155, 189, 0.2));
-    padding: 0,
-    /*        TODO use cloud texture http://www.wallcoo.net/cartoon/Scrapbook_Art_Paper_Summer_Fun/images/kcroninbarrow-summerfun-cloudpaper.jpg*/
+    padding: 2px;
+    font-family: 'Roboto Slab', serif;
     font-size: 1.3rem;
     box-shadow: 0.5px 2px #f8f0ed;
 }
@@ -110,7 +127,6 @@ nav.nav-Bg {
 /*>>title<<*/
 
 h1.title {
-
     font-size: 5.5rem;
     text-align: center;
     margin-bottom: 0px;
@@ -119,7 +135,7 @@ h1.title {
     color: white
 }
 
-h1 span.ve {
+h1 span.title_ve {
     color: #9acd32;
     font-family: 'Delius Swash Caps', cursive;
     text-shadow: 2px 3px #6156e5;
@@ -136,12 +152,19 @@ h1 span.ve {
 
 /*>>description<<*/
 
+p.description {
+    font-size: 1.75rem;
+}
+
+
 p.lead {
-    font-size: 1.8em;
+    font-size: 1.55em;
     font-weight: 300;
     text-align: center;
+    line-height: 1cm;
     text-transform: lowercase;
     font-family: 'Delius Swash Caps', cursive;
+    text-shadow: 1px 1px #6a669a;
 }
 
 span.hangryRed {
@@ -160,13 +183,78 @@ span.treat {
     text-shadow: 1px 3px #6156e5;
 }
 
-p.description {
-    font-size: 1.75rem;
-    text-align: center;
-    align-self: center;
-    padding-bottom: 0;
-}
+
 
 /*>>choices<<*/
 
+.ourButton {
+    font-family: 'Roboto Slab', serif;
+    background-color: #eeeff0;
+    padding: 10px;
+    margin: 5px;
+    position: relative;
+    font-size: 1.75rem;
+    text-decoration: none;
+    color: #000000;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    border-bottom: solid 1.5px rgba(165, 159, 229, 0.51);
+    box-shadow: inset 0px 1px 0px #C8C6E0, 0px 7px 0px rgba(70, 74, 76, 0.46);
+    border-radius: 10px;
+
+}
+
+.ourButton:hover {
+    top: 7px;
+    box-shadow: 0px 3px 10px #8883BC;
+    color: #46445f;
+    text-shadow: 1px 2px #f1f1f4;
+    border-bottom: solid 0.5px #636089;
+    box-shadow: 0px 3px 0px rgba(99, 96, 137, 0.68);
+    background-color: #cecdde;
+}
+
+
 /*FOOTER*/
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    width: 100%;
+    font-size: 1rem;
+    background-color: rgba(140, 187, 46, 0.84);
+    border-top: solid 1px white;
+}
+
+#cloud {
+    width: 683px;
+    height: 364px;
+    position: fixed;
+    z-index: -1;
+    bottom: 8%;
+    left: 26%;
+    filter: drop-shadow( 2px 2px 2px rgba(8, 8, 8, 0.48));
+    animation-name: floating;
+    animation-timing-function: ease-in-out;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes floating {
+    from {
+        transform: translate(0, 0px);
+    }
+    60% {
+        transform: translate(0, 6px);
+    }
+    to {
+        transform: translate(0, -0px);
+    }
+}
+
+.testing {
+    z-index: 1;
+    position: absolute;
+
+}
