--- a/consistencystylesheet.css
+++ b/consistencystylesheet.css
@@ -13,12 +13,6 @@ body {
     body {
         font-size: 12px;
     }
-
-    div.social li {
-    display: inline-block;
-    padding: 0 0.5rem;
-}
-
 }
 
 /*Navigation Bar*/
@@ -36,7 +30,7 @@ div.social li {
     font-family: 'Delius Swash Caps', cursive;
 }
 
-nav.nav-Bg {
+nav.navStyling {
     padding: 0 0;
     font-family: 'Roboto Slab', serif;
     font-size: 1.3rem;
@@ -55,74 +49,17 @@ nav a.disabled::after {
 .whiteIcon {
     color: white;
     text-shadow: 1px 2px #3c3c3c;
-    font-size: 2rem;
-}
-/*Mainpage*/
-
-body.gradient_bluepink_bkgrnd {
-    background: linear-gradient(147deg, #77a7c5, #a7c6db, #c0d1db, #fe956e);
-    background-size: 800% 800%;
-    -webkit-animation: AnimationName 20s ease infinite;
-    -moz-animation: AnimationName 20s ease infinite;
-    -o-animation: AnimationName 20s cubic-bezier(.21, -0.13, .25, 1) infinite;
-    animation: AnimationName 20s ease infinite;
-}
-
-@-webkit-keyframes AnimationName {
-    0% {
-        background-position: 0% 48%
-    }
-    50% {
-        background-position: 100% 53%
-    }
-    100% {
-        background-position: 0% 48%
-    }
-}
-
-@-moz-keyframes AnimationName {
-    0% {
-        background-position: 0% 48%
-    }
-    50% {
-        background-position: 100% 53%
-    }
-    100% {
-        background-position: 0% 48%
-    }
-}
-
-@-o-keyframes AnimationName {
-    0% {
-        background-position: 0% 48%
-    }
-    50% {
-        background-position: 100% 53%
-    }
-    100% {
-        background-position: 0% 48%
-    }
-}
-
-@keyframes AnimationName {
-    0% {
-        background-position: 0% 48%
-    }
-    50% {
-        background-position: 100% 53%
-    }
-    100% {
-        background-position: 0% 48%
-    }
+    font-size: 1.33rem;
 }
 
 /*Footer*/
-
 .footer {
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    font-family: 'Roboto Slab', serif;
+    top: 83px;
     width: 100%;
+    color: #1d1d1d;
     font-size: 1rem;
     background-color: rgba(140, 187, 46, 0.84);
-    border-top: solid 1px white;
+    border-top: solid 3px #577619;
 }
