--- a/indexstylesheet.css
+++ b/indexstylesheet.css
@@ -8,7 +8,7 @@ body {
 
 /*
 div {
-    border: 0.5px solid red;
+    border: 0.5px solid white;
 }
 */
 
@@ -22,16 +22,77 @@ p.nopadding_bt {
         width: 80%;
         display: inline-block;
     }
+    p.description {
+    font-size: 1rem;
 }
+}
+
 @media only screen and (min-width: 992px) {
     p.lead {
         line-height: 0.1cm;
-        }
+    }
 }
 
-/*background*/
 
 /*MAIN CONTENT*/
+
+/*>>background<<*/
+body.gradient_bluepink_bkgrnd {
+    background: linear-gradient(147deg, #77a7c5, #a7c6db, #c0d1db, #fe956e);
+    background-size: 800% 800%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    -o-animation: AnimationName 20s cubic-bezier(.21, -0.13, .25, 1) infinite;
+    animation: AnimationName 20s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
+}
+
+@-moz-keyframes AnimationName {
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
+}
+
+@-o-keyframes AnimationName {
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
+}
+
+@keyframes AnimationName {
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
+}
 
 /*>>title<<*/
 
@@ -56,7 +117,6 @@ h1 span.title_ve {
     padding: 0;
     margin: 0;
     text-align: center;
-    text-shadow: 2px 2px #7d78b7;
 }
 
 /*>>description<<*/
@@ -153,9 +213,7 @@ p.lead {
 .parent {
     width: 100%;
     display: flex;
-    /* required */
     flex-flow: row nowrap;
-    /* required */
     bottom: 90px;
     position: relative;
     top: -100px;
