--- a/consistencystylesheet.css
+++ b/consistencystylesheet.css
@@ -5,7 +5,6 @@
 html,
 body {
     font-size: 16px;
-    /*make all font sizes REM so font size can be responsive to viewport*/
 }
 
 @media only screen and (max-width: 544px) {
@@ -13,20 +12,22 @@ body {
     body {
         font-size: 12px;
     }
+
+    div.socialbtns li {
+        padding: 0 8px;
+    }
 }
 
 /*Navigation Bar*/
+
+/*overrides bootstrap theme*/
 
 button {
     margin: 0 auto;
 }
 
-div.social li {
-    display: inline-block;
-}
-
-.vegan_ve {
-    color: #9acd32;
+.nav_ve {
+    color: #7FA829;
     font-family: 'Delius Swash Caps', cursive;
 }
 
@@ -46,20 +47,34 @@ nav a.disabled::after {
     padding-right: 0;
 }
 
-.whiteIcon {
+div.socialbtns li {
+    display: inline-block;
+}
+
+div.socialbtns a.nav-link > i {
     color: white;
-    text-shadow: 1px 2px #3c3c3c;
-    font-size: 1.33rem;
+    font-size: 1.7rem;
+}
+
+div.socialbtns a.nav-link > i:hover {
+    color: #78778A !important;
 }
 
 /*Footer*/
-.footer {
-    position: relative;
+.footerStyle {
     font-family: 'Roboto Slab', serif;
-    top: 83px;
-    width: 100%;
     color: #1d1d1d;
     font-size: 1rem;
-    background-color: rgba(140, 187, 46, 0.84);
-    border-top: solid 3px #577619;
+}
+#cfg_logo {
+    width: 149.797px;
+}
+
+footer .container-fluid {
+    margin-top: 28px;
+    background-color: rgba(124, 122, 150, 0.47);
+    border-top: 2px solid white;
+    padding-top: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
