--- a/indexstylesheet.css
+++ b/indexstylesheet.css
@@ -1,16 +1,15 @@
-/*GLOBAL STYLING & MEDIA QUERIES/RESPONSIVE STYLES*/
+html, body{
+    margin: 0;
+    padding: 0;
 
-html,
-body {
+    min-width: 100%;
     width: 100%;
-    min-height: 100%;
-}
+    max-width: 100%;
 
-/*
-div {
-    border: 0.5px solid white;
+    min-height: 100%;
+    height: 100%;
+    max-height: 100%;
 }
-*/
 
 p.nopadding_bt {
     margin-bottom: 2px;
@@ -23,8 +22,8 @@ p.nopadding_bt {
         display: inline-block;
     }
     p.description {
-    font-size: 1rem;
-}
+        font-size: 1.5rem !important;
+    }
 }
 
 @media only screen and (min-width: 992px) {
@@ -113,7 +112,7 @@ h1 span.title_ve {
 
 .location {
     font-family: 'Delius Swash Caps', cursive;
-    font-size: 2.0rem;
+    font-size: 2.2rem;
     padding: 0;
     margin: 0;
     text-align: center;
@@ -128,14 +127,13 @@ p.description {
 span.hangryRed {
     font-family: 'Permanent Marker';
     color: #fe956e;
-    font-size: 2.45rem;
+    font-size: 1.5em;
     color: rgb(214, 68, 59);
     text-shadow: 2px 3px #464a4c;
 }
 
 span.treat {
-    font-family: 'Delius Swash Caps', cursive;
-    font-size: 2.3rem;
+    font-size: 1.5em;
     color: yellowgreen;
     font-family: 'Delius Swash Caps', cursive;
     text-shadow: 1px 3px #6156e5;
@@ -153,6 +151,12 @@ p.lead {
     text-transform: lowercase;
     font-family: 'Delius Swash Caps', cursive;
     text-shadow: 1px 1px #6a669a;
+}
+
+.lead_ve {
+    color: yellowgreen;
+    font-family: 'Delius Swash Caps', cursive;
+    text-shadow: 1px 3px #6156e5;
 }
 
 /*>>choices<<*/
