--- a/STresultsstylesheet.css
+++ b/STresultsstylesheet.css
@@ -1,8 +1,5 @@
-nav {
-    background-color: rgba(124, 122, 150, 0.47);
-}
 body {
-background: linear-gradient(148deg, #f8d7aa, #f2a1a1, #83dcf7);
+background: linear-gradient(148deg, #83dcf7, #f2a1a1, #f8d7aa);
 background-size: 600% 600%;
 -webkit-animation: AnimationName 20s ease infinite;
 -moz-animation: AnimationName 20s ease infinite;
@@ -24,19 +21,9 @@ animation: AnimationName 20s ease infinite;
     100%{background-position:0% 14%}
 }
 
-#sidebar {
-    background-color: pink;
-}
-
-/*
-#results {
-    background-color: aquamarine;
-}
-*/
-
-/*Results*/
+/*RESULTS*/
 div.shadow {
-    box-shadow: 0px 4px 3px #81818261;
+    box-shadow: 0px 4px 3px rgba(136, 136, 136, 0.81);
 }
 
 h1.title {
@@ -45,7 +32,64 @@ h1.title {
     text-shadow: 2px 3px rgba(242, 161, 161, 0.67);
 }
 
-
-div.containerPink {
-    border-top: 2.5px solid rgba( 235, 94, 85, 0.6 ) !important;
+h4.description {
+    font-size: 1.5rem;
+    font-family: 'Delius Swash Caps', cursive;
 }
+
+/*SIDEBAR */
+h4.sidebarHeader {
+    font-family: 'Delius Swash Caps', cursive;
+}
+h5.card-title {
+    font-family: 'Playfair Display', serif;
+    font-weight: 900;
+}
+h6.card-subtitle {
+    font-family: 'Delius Swash Caps', cursive;
+    font-size: 1rem;
+}
+
+p.card-text {
+    line-height: 1.2 !important;
+    font-size: 1rem;
+    font-family: 'Georgia', serif;
+}
+
+p.minitext {
+    font-size: 0.7rem;
+    text-align: right;
+    font-style: italic;
+}
+
+/*Recommendation of the Week*/
+div.RecommendStyle {
+    background-color: rgba(174, 140, 166, 0.80);
+}
+
+#sidebar a {
+    color: white;
+}
+
+#sidebar a:hover {
+    color: #2d2d3b;
+    font-style: italic bold;
+    text-decoration: none;
+}
+/*Newsletter*/
+
+
+/*Helper Colours*/
+.colorme2 {
+    background-color: mediumpurple;
+}
+
+.changeme {
+    color: red !important;
+    background: rgba(255, 235, 0, 0.32);
+}
+
+
+
+
+
