--- a/STresultsstylesheet.css
+++ b/STresultsstylesheet.css
@@ -1,27 +1,52 @@
 body {
-background: linear-gradient(148deg, #83dcf7, #f2a1a1, #f8d7aa);
-background-size: 600% 600%;
--webkit-animation: AnimationName 20s ease infinite;
--moz-animation: AnimationName 20s ease infinite;
-animation: AnimationName 20s ease infinite;
-}
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 14%}
-    50%{background-position:100% 87%}
-    100%{background-position:0% 14%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 14%}
-    50%{background-position:100% 87%}
-    100%{background-position:0% 14%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 14%}
-    50%{background-position:100% 87%}
-    100%{background-position:0% 14%}
+    background: linear-gradient(148deg, #83dcf7, #f2a1a1, #f8d7aa);
+    background-size: 600% 600%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    animation: AnimationName 20s ease infinite;
 }
 
+@-webkit-keyframes AnimationName {
+    0% {
+        background-position: 0% 14%
+    }
+    50% {
+        background-position: 100% 87%
+    }
+    100% {
+        background-position: 0% 14%
+    }
+}
+
+@-moz-keyframes AnimationName {
+    0% {
+        background-position: 0% 14%
+    }
+    50% {
+        background-position: 100% 87%
+    }
+    100% {
+        background-position: 0% 14%
+    }
+}
+
+@keyframes AnimationName {
+    0% {
+        background-position: 0% 14%
+    }
+    50% {
+        background-position: 100% 87%
+    }
+    100% {
+        background-position: 0% 14%
+    }
+}
+
+.active {
+    background-color: #C8C6E0 !important;
+}
 /*RESULTS*/
+
 div.shadow {
     box-shadow: 0px 4px 3px rgba(136, 136, 136, 0.81);
 }
@@ -41,10 +66,12 @@ h4.description {
 h4.sidebarHeader {
     font-family: 'Delius Swash Caps', cursive;
 }
+
 h5.card-title {
     font-family: 'Playfair Display', serif;
     font-weight: 900;
 }
+
 h6.card-subtitle {
     font-family: 'Delius Swash Caps', cursive;
     font-size: 1rem;
@@ -64,6 +91,11 @@ p.minitext {
 
 /*Recommendation of the Week*/
 div.RecommendStyle {
+    background-color: rgba(242, 161, 161, 0.80);
+
+}
+
+div.NewsletterStyle {
     background-color: rgba(174, 140, 166, 0.80);
 }
 
@@ -76,10 +108,41 @@ div.RecommendStyle {
     font-style: italic bold;
     text-decoration: none;
 }
-/*Newsletter*/
 
+/*Newsletter*/
+form > div > label {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.ourButton2 {
+    font-family: 'Roboto Slab', serif;
+    background-color: #eeeff0;
+    padding: 10px;
+    display: inline-block;
+    margin: 5px;
+    position: relative;
+    font-size: 1rem;
+    color: #000000;
+    border-radius: 5px;
+    border-bottom: solid 1.5px rgba(165, 159, 229, 0.51);
+    box-shadow: inset 0px 1px 0px #C8C6E0, 0px 7px 0px rgba(70, 74, 76, 0.46);
+    border-radius: 10px;
+    flex: 0 0 100%
+}
+
+.ourButton2:hover {
+    box-shadow: 0px 3px 10px #8883BC;
+    color: #46445f;
+    text-shadow: 1px 2px #f1f1f4;
+    border-bottom: solid 0.5px #636089;
+    box-shadow: 0px 3px 0px rgba(99, 96, 137, 0.68);
+    background-color: #cecdde;
+}
 
 /*Helper Colours*/
+
 .colorme2 {
     background-color: mediumpurple;
 }
@@ -88,14 +151,3 @@ div.RecommendStyle {
     color: red !important;
     background: rgba(255, 235, 0, 0.32);
 }
-
-
-
-
-
-
-img #duck {
-    width: 100%;
-}
-
-
