--- a/consistencystylesheet.css
+++ b/consistencystylesheet.css
@@ -23,7 +23,7 @@ nav {
     background-color: rgba(124, 122, 150, 0.47);
 }
 
-.cloudFloat {
+i.cloudFloat {
     color: white;
     filter: drop-shadow( 2px 2px 2px rgba(8, 8, 8, 0.48));
     animation-name: floating;
