--- a/stylesheets/STstylesheet.css
+++ b/stylesheets/STstylesheet.css
@@ -1,6 +1,6 @@
 body {
-    background: linear-gradient(148deg, #83dcf7, #D96B6B, #b48350, #f8d7aa);
-    background-size: 600% 600%;
+    background: linear-gradient(148deg, #83dcf7,  #83dcf7);
+    background-size: 800% 800%;
     -webkit-animation: AnimationName 20s ease infinite;
     -moz-animation: AnimationName 20s ease infinite;
     animation: AnimationName 20s ease infinite;
@@ -45,13 +45,14 @@ body {
 /*RESULTS*/
 
 div.shadow {
-    box-shadow: 0px 4px 3px rgba(136, 136, 136, 0.81);
+    box-shadow: 0px 4px 3px rgba(136E, 136, 136, 0.81);
 }
 
 h1.title {
     font-family: 'Pacifico';
-    font-size: 3.6rem;
-    text-shadow: 2px 3px #eb5757;
+    font-size: 3.8rem;
+    color: #d44343;
+    text-shadow: 2px 3px #2c2929;
 }
 
 h4.description {
