--- a/stylesheets/WFstylesheet.css
+++ b/stylesheets/WFstylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(148deg, #83dcf7, #97AA1B, #F9BA45, #f8d7aa);
+    background: linear-gradient(148deg, #83dcf7, #97AA1B,  #F9AF25);
     background-size: 800% 800%;
     -webkit-animation: AnimationName 20s ease infinite;
     -moz-animation: AnimationName 20s ease infinite;
@@ -43,8 +43,6 @@ body {
 }
 
 
-
-
 /*RESULTS*/
 
 div.shadow {
@@ -54,7 +52,8 @@ div.shadow {
 h1.title {
     font-family: 'Kumar One', cursive;
     font-size: 3.6rem;
-    text-shadow: 3px 2px rgba(204, 91, 6,0.80);
+    text-shadow: 4px 2px #2c2929;
+    color: #F26D07;
 }
 
 h4.description {
