--- a/stylesheets/indexstylesheet.css
+++ b/stylesheets/indexstylesheet.css
@@ -1,11 +1,9 @@
 html, body{
     margin: 0;
     padding: 0;
-
     min-width: 100%;
     width: 100%;
     max-width: 100%;
-
     min-height: 100%;
     height: 100%;
     max-height: 100%;
@@ -32,6 +30,9 @@ p.nopadding_bt {
     }
 }
 
+nav {
+    background-color: rgba(124, 122, 150, 0.90)!important;
+}
 
 /*MAIN CONTENT*/
 
@@ -223,7 +224,5 @@ p.lead {
     z-index: -1;
     position: absolute;
     width: 100%;
-    /* required */
     flex: none;
-    /* required */
 }
