--- a/stylesheets/aboutstylesheet.css
+++ b/stylesheets/aboutstylesheet.css
@@ -1,16 +1,26 @@
 div.info_1 {
     background-color: #9acd32;
+	margin: 30px 20% 0 20%;
 }
 div.info_1 p {
     text-align: justify;
 }
 div.info_1 img {
-    width: 50%;
-    height: auto;
+	width: 20%;
+	float:left;
+	height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 div.info_1 h2 {
     text-align: center;
+}
+div.info_2 img {
+	width: 20%;
+	float:left;
+	height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
