--- a/stylesheets/WFstylesheet.css
+++ b/stylesheets/WFstylesheet.css
@@ -61,9 +61,7 @@ h4.description {
     font-family: 'Delius Swash Caps', cursive;
 }
 
-/*Helper Colours*/
-
-.changeme {
-    color: red !important;
-    background: rgba(255, 235, 0, 0.32);
+/*Sidebar*/
+div.RecommendStyle {
+    background-color: rgba(232, 117, 28, 0.7);
 }
