--- a/stylesheets/aboutstylesheet.css
+++ b/stylesheets/aboutstylesheet.css
@@ -5,10 +5,11 @@ div.info_1 {
 }
 div.info_1 p {
     text-align: justify;
+	font-size: 14px;
 }
 div.info_1 img {
 	width: 20%;
-	float:left;
+	float:center;
 	height: auto;
     display: block;
     margin-left: auto;
@@ -19,3 +20,8 @@ div.info_1 h2 {
 }
 div.info_1 h4 {
     text-align: center;
+}
+iframe {
+    display: block;
+    margin: 0 auto;
+    border: 0;
