Editing the form

--- a/stylesheets/aboutstylesheet.css
+++ b/stylesheets/aboutstylesheet.css
@@ -31,3 +31,11 @@ span {
 	font-family: 'Delius Swash Caps', cursive;
 	color: #9acd32; 
 }
+textarea {
+	width: 100%;
+}
+	h5 {
+		font-family: 'Roboto Slab', serif;
+	}
+		
+}
