--- a/stylesheets/STstylesheet.css
+++ b/stylesheets/STstylesheet.css
@@ -67,9 +67,9 @@ div.RecommendStyle {
 /*MAP*/
 /*title style, change colour to be same as results title colour*/
 #iw-container .iw-title {
-    font-family: 'Delius Swash Caps', cursive;
-    font-size: 1.3rem;
-    font-weight: 800;
+    font-family: 'Pacifico';
+    font-size: 1.5rem;
+    font-weight: 400;
     text-align: center;
     color: #de5454;
 }
