--- a/suggestspotstylesheet.css
+++ b/suggestspotstylesheet.css
@@ -1,4 +1,28 @@
-.background { /*edit this selector to change the background of the place*/
+.background
+background: linear-gradient(273deg, #ed820f, #ed820f);
+background-size: 400% 400%;
+-webkit-animation: AnimationName 30s ease infinite;
+-moz-animation: AnimationName 30s ease infinite;
+animation: AnimationName 30s ease infinite;
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+
+
+
+{ /*edit this selector to change the background of the place*/
 /*go to this webiste to create one of the moving gradient backgrounds*/
 /* https://www.gradient-animator.com/ and copy everything on the left into here*/
 }
@@ -12,5 +36,3 @@ h1.title {
 h2 {
   color: #bbbbbb;
 }
-
-
