--- a/suggestspotstylesheet.css
+++ b/suggestspotstylesheet.css
@@ -1,31 +1,68 @@
-.background
-background: linear-gradient(273deg, #ed820f, #ed820f);
-background-size: 400% 400%;
--webkit-animation: AnimationName 30s ease infinite;
--moz-animation: AnimationName 30s ease infinite;
-animation: AnimationName 30s ease infinite;
+media only screen and (max-width: 767px) {
+    div.info_1 {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+}
+
+.background {
+    background: linear-gradient(147deg, #77a7c5, #a7c6db, #c0d1db, #fe956e);
+    /*change the line above with your colours, go onto this website  (https://www.gradient-animator.com/) and copy the background:linear-gradient line for it to change to your colours*/
+    background-size: 800% 800%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    -o-animation: AnimationName 20s cubic-bezier(.21, -0.13, .25, 1) infinite;
+    animation: AnimationName 20s ease infinite;
+}
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
+@-o-keyframes AnimationName {
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
+}
+
 @keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-
-
-
-{ /*edit this selector to change the background of the place*/
-/*go to this webiste to create one of the moving gradient backgrounds*/
-/* https://www.gradient-animator.com/ and copy everything on the left into here*/
+    0% {
+        background-position: 0% 48%
+    }
+    50% {
+        background-position: 100% 53%
+    }
+    100% {
+        background-position: 0% 48%
+    }
 }
+
 
 h1.title {
   font-size: 4.6rem;
