Added in header fonts

--- a/stylesheets/aboutstylesheet.css
+++ b/stylesheets/aboutstylesheet.css
@@ -112,4 +112,13 @@ h5 {
     font-family: 'Roboto Slab', serif;
 }
 
+#HannahHeader {
+    font-family: fantasy;
+}
+
+#MichelleHeader {
+    font-family: 'Lobster', cursive;
+}
+#SeraphinaHeader {
+    font-family: 'Chicle', cursive;
 }
